--- a/app/src/pages/dashboard/Dashboard.css
+++ b/app/src/pages/dashboard/Dashboard.css
@@ -8,3 +8,10 @@ td  {
     padding-top: 20px !important;
     padding-bottom: 0px !important; 
 }
+
+.dashboard-container{
+    margin-top: 30px;;
+    background-color: #dddddd;
+    border-radius: 10px;
+    padding: 30px;
+}
