--- a/app/src/components/app/App.css
+++ b/app/src/components/app/App.css
@@ -29,3 +29,10 @@ td  {
     /* padding-top: 20px !important; */
     /* padding-bottom: 0px !important;  */
 }
+
+.link{
+    background-color: rgb(6, 44, 59);
+    color: #fff;
+    padding: 2px 10px;
+    border-radius: 10px;
+}
